tests/fails/f26.t
if not require("fail") then return end

terra foo()
    var a,b,c = 3,4,6,7
end
foo()
